sub/120/build.txt
C:\SlowJudge\sub\120\Main.cpp: In function 'int main()':
C:\SlowJudge\sub\120\Main.cpp:64:12: warning: division by zero [-Wdiv-by-zero]
     int a=9/0;
            ^
C:\SlowJudge\sub\120\Main.cpp:66:5: error: expected ';' before 'return'
     return 0;
     ^
g++.exe: error: C:\SlowJudge\sub\120\Main.o: No such file or directory
Could Not Find C:\SlowJudge\sub\120\Main.o
END
